--- a/sasir-rodrigues/Makefile
+++ b/sasir-rodrigues/Makefile
@@ -1,14 +1,20 @@
 DOCKER_REPO=sasir/lwimagercs
 
-.PHONY: docker-image clean
+.PHONY: all build run force-build
 
-all: docker-image
+all: build run
 
-docker-image:
+build:
 	docker build -t ${DOCKER_REPO} .
+
+force-build:
+	docker build --pull -t $(IMAGE_NAME) --no-cache=true .
 
 clean:
 	docker rmi ${DOCKER_REPO}
 
-run: docker-image
-	docker run -ti ${DOCKER_REPO} /bin/bash
+run:
+	docker run -v `pwd`/input:/input:ro -v `pwd`/output:/output:rw $(IMAGE_NAME) 
+
+shell:
+	docker run -ti -v `pwd`/input:/input:ro -v `pwd`/output:/output:rw $(IMAGE_NAME) bash
